position layout fixes, type kit introduction, buttons: added bootstrap btn class

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <script src="js/assets/respond.js"></script>
     <![endif]-->
 	<script src="js/assets/modernizr-latest.js"></script>
+	<!-- ADOBE TYPEKIT -->
+	<script src="//use.typekit.net/iku0bgp.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body class="loading container-fluid">
 	<div class="nav-closer"></div>
@@ -127,7 +130,7 @@
 							<h2>But enough foreplay!<br><br>
 								Let’s get to the real<br>
 								<em>thrust</em> of the matter.</h2><br>
-							<a class="hvr-hang cs-button" href="#/positions">ONWARD &amp; UNDERWARD</a>
+							<a class="hvr-hang cs-button btn" href="#/positions">ONWARD &amp; UNDERWARD</a>
 						</div>
 					</div>
 				</div>
@@ -147,7 +150,7 @@
 					<div class="chapter-inner">
 							<div class="part1">
 								<img class="dropcap hidden-xs" src="img/dropcaps/B.svg">
-								<h2>Breasts: An Easy Concept to Grasp</h2>
+								<h2>Breast Cancer</h2>
 								<p>Possibly the easiest of all places to commit to memory are the mammaries. But in the event your partner’s melons leave you scratching yours, this handy (pardon) guide should help you squeeze the most out of your (up-and–) downtime.</p>
 								<p>Just try the <strong><em>TWEAK</em></strong> method.</p>
 							</div>
@@ -184,7 +187,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/T.svg">
-							<h2>Testicles: How to Hang with the Best of Them</h2>
+							<h2>Testicular Cancer</h2>
 							<p>Tackling the testicles may seem like a handful. So if you find yourself concerned you might not have what it takes to judge a sack in the sack, we have just the technique for you.</p>
 							<p>Simply <strong><em>LICK</em></strong> the testicles.</p>
 						</div>
@@ -217,7 +220,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/S.svg">
-							<h2>Skin: The Naked, Sweating, Panting, Heaving Truth</h2>
+							<h2>Skin Cancer</h2>
 							<p>The skin is the largest of the body’s organs (yes, men, even yours). Which likely means the thought of memorizing every delicious curve, nook, and cranny has paralyzed your brain under the weight of this seemingly impossible task.</p>
 							<p>Never you fret.</p>
 							<p>You’ll soon have your partner’s every inch under both wraps and yourself.</p>
@@ -260,7 +263,7 @@
 					<div class="chapter-inner">
 						<div class="part1">
 							<img class="dropcap hidden-xs" src="img/dropcaps/P.svg">
-							<h2>Prostate: The Insider Edition</h2>
+							<h2>Prostate Cancer</h2>
 							<p>The prostate leaves much to be desired in the accessibility department. At least, for self-exams.
 							<p>Thankfully, after reading this little guide, you and your partner will doubtless feel more equipped than ever to put your finger on all of the prostate’s delicacies.</p>
 							<p>Just remember to <strong><em>PROBE</em></strong> it.</p>
@@ -505,28 +508,28 @@
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
 					<br>
-					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
+					<a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="testicular">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
 					<br>
-					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
+					<a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="skin">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
 					<br>
-					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
+					<a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 				<div data-cancer-type="prostate">
 					<h4>Not Titillated Yet?</h4>
 					<p>Well perk up!</p>
 					<p>A firm grasp of her luscious locks won’t just clear the path for your intimately watchful gaze</p>
 					<br>
-					<a class="cs-button hvr-bob" href="#/support">Support the Cause</a>
+					<a class="cs-button btn hvr-bob" href="#/support">Support the Cause</a>
 				</div>
 			</div>
 		</section>
