JSON positions data is now JS object, fixed on-binded functions

--- a/index.html
+++ b/index.html
@@ -317,297 +317,7 @@
 				</div>
 			</div>
 			<!--POSITIONS-->
-			<div id="positions">
-				<!--<div data-position="inspect-a-pec" data-cancer-type="breast" class="position-full-width">
-					<img alt="" src="img/positions/svg/InspectAPec.svg">
-					<div class="hover-title">Inspect-a-Pec<small>Breast Cancer</small></div>
-					<div data-position="inspect-a-pec" class="detail detail-image-horizontal">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/InspectAPec.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Inspect-a-Pec</h2>
-								<div class="detail-text-main">
-									<p>Ladies, lead your lover to a bed or other flat surface and lie on your back. Coax him (as if it required any effort at all) into the familiar missionary position, but then, arch your back upwards to meet him — and continue making his acquaintance over and over again. As you thrust to the beat of his drum, take note of his pectorals*, and remember that when it comes to this position, there’s no do-not-touch rule to be found.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Once you’ve seen all that his hovering pectorals have to show you, try this trick: Using one hand, grip the back of his hair firmly and give a firm tug. He’ll arch his back and pull his chest into a more open position. All the better for you to see his chest in a more pronounced light.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="handy-scan" data-cancer-type="breast">
-					<img alt="" src="img/positions/svg/HandyScan.svg">
-					<div class="hover-title">Handy Scan<small>Breast Cancer</small></div>
-					<div data-position="handy-scan" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/HandyScan.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Handy Scan</h2>
-								<div class="detail-text-main">
-									<p>Things come to a grinding start in this position, as you wedge your hips firmly between your partner’s legs.* Once things really start to shake and rattle, let one of your hands find a familiar squeeze or two. Massage,  pinch, and of course, TWEAK her breasts to ensure you get her gears really moving.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Try this position upright, try it laying down, try it on your side, or even upside down. For full effect, the Handy Scan is best enjoyed from multiple angles.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="amorous-anal-yst" data-cancer-type="prostate">
-					<img alt="" src="img/positions/svg/AmorousAnalyst.svg">
-					<div class="hover-title">Amorous Anal-yst<small>Prostate Cancer</small></div>
-					<div data-position="amorous-anal-yst" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/AmorousAnalyst.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Amorous Anal-yst</h2>
-								<div class="detail-text-main">
-									<p>Seat your partner on the edge of the bed or table, and find a comfortable spot between his open legs. While your mouth may instinctively do what mouths do best when faced with a cylindrical object, don’t let that be the only job you get done. Gently allow your finger to make its way up, up, and away, to find the Promised Gland.*</p>
-									<p class="just-the-tip">Just the Tip:<br>*If the seated position is causing your fingers to fumble, give yourself an all-access pass, by simply lying your lover on his back.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="legs-up-checkup" data-cancer-type="skin">
-					<img alt="" src="img/positions/svg/LegsUpCheckup.svg">
-					<div class="hover-title">Legs Up Checkup<small>Skin Cancer</small></div>
-					<div data-position="legs-up-checkup" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/LegsUpCheckup.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Legs Up Checkup</h2>
-								<div class="detail-text-main">
-									<p>Raise your partner’s legs into the air for maximum pleasure and visibility. As you begin playing your favorite tune on her lady harmonica*, take note of the recital space you’ve found between her legs, dividing your attention equally between either of her thighs. Once you’ve given her thighs the once over with your eyes, remember to give it the twice-under with your hands to make the most of your debut performance.</p>
-									<p class="just-the-tip">Just the Tip:<br>*You know the one: It sounds something like, “Yes, yes, oh yes!”</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="manogram" data-cancer-type="breast" class="position-test">
-					<img alt="" src="img/positions/svg/Manogram.svg">
-					<div class="hover-title">Manogram<small>Breast Cancer</small></div>
-					<div data-position="manogram" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/Manogram.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Manogram</h2>
-								<div class="detail-text-main">
-									<p>Come to rest beside your partner. Then, stop resting. As you inject a little more than fun into your routine, raise your lover’s arm over your head and bring your hand to his chest. While your hips do the rocking, let your hands do the checking, making their way from tip top of the teat to the base of the bosom.*</p>
-									<p class="just-the-tip">Just the Tip:<br>*Once you’ve explored this Everest, make your way to other climes by switching sides.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="triple-x-ray" data-cancer-type="skin">
-					<img alt="" src="img/positions/svg/TripleXRay.svg">
-					<div class="hover-title">Triple X-Ray<small>Skin Cancer</small></div>
-					<div data-position="triple-x-ray" class="detail detail-image-horizontal">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/TripleXRay.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Triple X-Ray</h2>
-								<div class="detail-text-main">
-									<p>Make your way to a flat surface, like a bed, floor, or countertop, and sit facing your lover. Ladies, place your legs on your man’s shoulders, to give him unobstructed access to your most guarded secret. Bracing yourself with your hands behind you, guide your thrusts at your own pace. Your partner should be giving you quite the look-over* by this point — but don’t forget to return the favor. Eye his chest and neck, and remember to stare penetratingly into his gaze. After all, it’s always nice to reciprocate.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Men: As you row your way to completion, observe the inside of your lover’s ankles and feet. A kiss and nibble on either will go a long way to making this position worth both your whiles.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="enter-the-proctologist" data-cancer-type="prostate" class="position-full-width">
-					<img alt="" src="img/positions/svg/EnterTheProctologist.svg">
-					<div class="hover-title">Enter the Proctologist<small>Prostate Cancer</small></div>
-					<div data-position="enter-the-proctologist" class="detail detail-image-horizontal">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/EnterTheProctologist.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Enter the Proctologist</h2>
-								<div class="detail-text-main">
-									<p>Begin by lying your partner down on a flat surface,* and gently mounting one of his thighs so that your knees are on either side of this leg. Now, take a finger and enter into his most concealed of caverns, arching the finger upwards to reach the prostate. (Enjoy that moan; you’ve earned it.) Run your finger along the length of the upwards interior of his rectum, and get as much of a feeling for things… as you’re giving him.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Of course, flat can fall flat sometimes — and as we all know, gravity doesn’t (and shouldn’t) always pertain to the behavior of legs. Try placing a pillow under the small of his back for a more open kind of access.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="dr-ben-dover" data-cancer-type="prostate">
-					<img alt="" src="img/positions/svg/DrBenDover.svg">
-					<div class="hover-title">Dr. Ben Dover<small>Prostate Cancer</small></div>
-					<div data-position="dr-ben-dover" class="detail detail-image-horizontal">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/DrBenDover.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Dr. Ben Dover</h2>
-								<div class="detail-text-main">
-									<p>With this hand, you do him bed. And with the other, you’ll do something quite a bit more daring.</p> 
-									<p>Start this position by lying your partner on his back. Evoking the exhibitionist in yourself, find a place seated comfortably on his chest.* While you’ll undoubtedly want to tend to his most forthcoming of desires, free a hand to discover a more secretive one. For while you fill a void he never dreamed he needed filling, you’ll be winding down this checkup — but only winding up the fun.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Now just because he’s reaching completion, doesn’t mean he should sit idly by. While you attend to  his business, make sure he attends to your pleasure.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="teste-teste-123" data-cancer-type="testicular">
-					<img alt="" src="img/positions/svg/TesteTeste123.svg">
-					<div class="hover-title">Teste, Teste, 1, 2, 3<small>Testicular Cancer</small></div>
-					<div data-position="teste-teste-123" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/TesteTeste123.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Teste, Teste, 1, 2, 3 </h2>
-								<div class="detail-text-main">
-									<p>Bring your lover to a wall,* and have him brace himself against it. Then assert (or is it, insert?) yourself. Pump away while you bring your hands down in front of him. With your hips and hands combined, this checkup may not be the only thing you bring to completion.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Windows and mirrors are especially handy, for the extra cheeky among you.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="sack-and-save" data-cancer-type="testicular">
-					<img alt="" src="img/positions/svg/SackAndSave.svg">
-					<div class="hover-title">Sack &amp; Save<small>Testicular Cancer</small></div>
-					<div data-position="sack-and-save" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/SackAndSave.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Sack &amp; Save</h2>
-								<div class="detail-text-main">
-									<p>Try your hand at this position to warm things up before the main event.</p>
-									<p>Slide in behind your lover and bring one arm across his chest.* While you nibble at his neck and whisper sweet, unmentionable things in his ear, bring your other hand around to his trunks. Resist the temptation to stop on the way to the family jewels; you can attend to his more forthright urges later.</p>
-									<p class="just-the-tip">Just the Tip:<br>*While you’re there, try teasing this beefy bosom of his. With stimulation coming from all directions, it won’t be long until he’s pining to discover your other talents.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="insider-information" data-cancer-type="skin">
-					<img alt="" src="img/positions/svg/InsiderInformation.svg">
-					<div class="hover-title">Insider Information<small>Skin Cancer</small></div>
-					<div data-position="insider-information" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/InsiderInformation.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Insider Information</h2>
-								<div class="detail-text-main">
-									<p>Find yourself behind your partner and position him on his knees. Now, find yourself in rather a more intimate proximity to your partner. As you get in (and out of) the groove of things, take the palms of your hands and lead them from the nape of the neck to the outside of the cheeks, employing a gentle touch* to feel for any abnormalities that may yet escape the eye.</p>
-									<p class="just-the-tip">Just the Tip:<br>*Do not always go gentle into that good pie. Once you’ve felt for all there is to feel, add a slap to signify the end — then, offer yourself up for a check.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div data-position="guy-ropractor" data-cancer-type="testicular">
-					<img alt="" src="img/positions/svg/Guyropractor.svg">
-					<div class="hover-title">Guy-ropractor<small>Testicular Cancer</small></div>
-					<div data-position="guy-ropractor" class="detail detail-image-vertical">
-						<div class="row-fluid">
-							<div class="col-sm-6 col-md-6 detail-image">
-								<img alt="" src="img/positions/svg/Guyropractor.svg">
-							</div>
-							<div class="col-sm-6 col-md-6 detail-text">
-								<h2>Guy-ropractor</h2>
-								<div class="detail-text-main">
-									<p>Lie your partner to the floor, then turn away from him. Now just when he thinks you’re giving him the cold shoulder, let him enjoy a much warmer part of your body. As you give his penetrating gaze a penetrating act to gaze upon, lean forward and take his testicles into your hand to put this checkup fully under your belt.</p>
-									<p class="just-the-tip">Just the Tip:<br>*If he’s far too excitable, a little warmth from the palms of your hand should loosen things up enough for you to complete this little exam.</p>
-								</div>
-								<div class="detail-social">
-									<img src="img/social/email.png"/>
-									<img src="img/social/facebook.png"/>
-									<img src="img/social/twitter.png"/>
-									<img src="img/social/tumblr.png"/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>-->
+			<div id="positions" class="empty">
 			</div>
 			<!--SUPPORT THE CAUSE CTAs-->
 			<div id="support-the-cause" class="row">
@@ -681,7 +391,7 @@
 						<div class="col-sm-6 col-md-6 detail-text">
 							<h2>{{display-name}}</h2>
 							<div class="detail-text-main">
-								{{detail-html}}
+								{{{detail-html}}}
 								<p class="just-the-tip">Just the Tip:<br>*{{just-the-tip}}</p>
 							</div>
 							<div class="detail-social">
@@ -721,6 +431,7 @@
 	<script src="js/assets/isotope.pkgd.min.js"></script>
 	<script src="js/assets/mustache.min.js"></script>
 	<!--<script src="js/wow.min.js"></script>-->
+	<script src="data/positions.js"></script>
 	<script src="js/assets.js"></script>
 	<script src="js/about.js"></script>
 	<script src="js/app.js"></script>
