updated TODO, deprecated code cleanup, fixed location.hash bug on deep link

--- a/index.html
+++ b/index.html
@@ -1,22 +1,14 @@
 <!doctype html>
 <html class="no-js">
-
 <head>
     <title>The Cancer Sutra</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/assets/animate.css">
-    </style>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    </style>
-    <link rel="stylesheet" href="fonts/keplerstd/keplerstd.css">
-    </style>
-    <link rel="stylesheet" href="fonts/socialico/socialico.css">
-    </style>
-    <link rel="stylesheet" href="css/app.css">
-    </style>
-    <link rel="stylesheet" href="css/mq.css">
-    </style>
+    <link rel="stylesheet" href="css/assets/animate.css"></style>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"></style>
+    <link rel="stylesheet" href="fonts/keplerstd/keplerstd.css"></style>
+    <link rel="stylesheet" href="css/app.css"></style>
+    <link rel="stylesheet" href="css/mq.css"></style>
     <!--[if lt IE 9]>
       <script src="js/assets/html5shiv.js"></script>
       <script src="js/assets/respond.js"></script>
@@ -52,7 +44,6 @@
             </a>
             <h1><a href="#/positions">The Cancer Sutra</a></h1>
         </div>
-        <!--<div class="foreplay"><a href="#/positions">Enough Foreplay!  &#10140;</a></div>-->
     </div>
     <div class="wrapper">
         <nav class="row">
@@ -90,10 +81,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="about-navigation">
-					<span>1/5</span>
-					<img id="next" src="img/desktop-arrow-down.png"/>
-				</div>-->
             </div>
             <div id="two" class="two row">
                 <div class="copy">
@@ -110,11 +97,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="about-navigation">
-					<img id="prev" src="img/desktop-arrow-up.png"/>
-					<span>2/5</span>
-					<img id="next" src="img/desktop-arrow-down.png"/>
-				</div>-->
             </div>
             <div id="three" class="three row">
                 <div class="copy">
@@ -132,11 +114,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="about-navigation">
-					<img id="prev" src="img/desktop-arrow-up.png"/>
-					<span>3/5</span>
-					<img id="next" src="img/desktop-arrow-down.png"/>
-				</div>-->
             </div>
             <div id="four" class="four row">
                 <div class="copy">
@@ -151,11 +128,6 @@
                         </div>
                     </div>
                 </div>
-                <!--<div class="about-navigation">
-					<img id="prev" src="img/desktop-arrow-up.png"/>
-					<span>4/5</span>
-					<img id="next" src="img/desktop-arrow-down.png"/>
-				</div>-->
             </div>
             <div id="five" class="five row">
                 <div class="copy">
@@ -399,7 +371,8 @@
 	        		<img src="img/support/ebook-2.jpg"/><br><br>
 	        		<img src="img/support/ebook-3.jpg"/><br><br>
 	        	</div>
-	        	<div class="col-md-8">
+	        	<div class="col-md-4 ebook-detail">
+	        		<div class="ebook-detail-sticky">
 		        	<h2>The Cancer Sutra eBook</h2>
 		        	<span class="ebook-price">$9</span>
 		        	<p>Donate now and get all 31 positions featured online, plus 1 bonus position, on your reading device of choice (supported on Kindle, iBooks®, and NOOK®).</p>
@@ -407,6 +380,7 @@
 		        	<a href><img src="img/support/kindle-button.png"/></a><br><br>
 		        	<a href><img src="img/support/nook-button.png"/></a>
 		        </div>
+		    </div>
 		    </div>
         </section>
     </div>
@@ -437,7 +411,7 @@
                             <div class="detail-text-main">
                                 {{{detail-html}}}
                                 <p class="just-the-tip">Just the Tip:
-                                    <br>*{{just-the-tip}}</p>
+                                    <br>*{{{just-the-tip}}}</p>
                             </div>
                             <div class="detail-social">
                                 <a href><img src="img/social/icons/email.png" /></a>
@@ -461,6 +435,7 @@
     <!--[if lte IE 9]>
 		<script src="js/assets/jquery-1.11.2.min.js"></script>
 	<![endif]-->
+	<script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/assets/imagesloaded.pkgd.min.js"></script>
     <script src="js/assets/toe.min.js"></script>
     <script src="js/assets/underscore-min.js"></script>
