mobile about: animations and layout

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="about" data-scroll-status="0" data-is-scrolling="false">
             <div id="one" class="one row onScreen">
                 <div class="copy">
-                    <div class="col-sm-5 col-sm-offset-7">
+                    <div class="col-about-copy col-sm-5 col-sm-offset-7">
                         <h2>This project exists<br>
 							to help save lives.</h2>
                         <h3>(One tweak, thrust, moan, and pant at a time.)</h3>
@@ -84,7 +84,7 @@
             </div>
             <div id="two" class="two row">
                 <div class="copy">
-                    <div class="col-sm-6">
+                    <div class="col-about-copy col-sm-6">
                         <h2><em>Before the what, the why.</em></h2>
                         <p>Because fear of cancer can be as bad as cancer itself.
                             <br> Because the earlier you detect cancer, the greater the chances of treating it successfully.
@@ -100,7 +100,7 @@
             </div>
             <div id="three" class="three row">
                 <div class="copy">
-                    <div class="col-sm-6 col-sm-offset-6">
+                    <div class="col-about-copy col-sm-6 col-sm-offset-6">
                         <h2><em>Knowledge.</em></h2>
                         <p>Because of all this, The Cancer Sutra is designed to
                             <br>challenge the taboos and conventions about cancer.
@@ -117,7 +117,7 @@
             </div>
             <div id="four" class="four row">
                 <div class="copy">
-                    <div class="col-sm-6">
+                    <div class="col-about-copy col-sm-6">
                         <h2>After all, saving lives<br>is <em>one thing.</em></h2>
                         <p>Having fun while doing it &mdash; well, that’s something
                             <br> we can all get behind. (Or in front of, depending.)</p>
@@ -132,7 +132,7 @@
             <div id="five" class="five row">
                 <div class="copy">
                     <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
+                        <div class="col-about-copy col-sm-6 col-sm-offset-3">
                             <h2>But enough foreplay!<br><br>
 								Let’s get to the real<br>
 								<em>thrust</em> of the matter.</h2>
@@ -398,7 +398,7 @@
     <div id="templates">
         <script type="template" class="positions">
             {{#positions}}
-            <div data-index="{{overview-index}}" data-chapter-index="{{chapter-index}}" data-position="{{element-name}}" data-cancer-type="{{cancer-type}}" class="wow fadeIn position-{{orientation}} {{#full-size}}position-full-size{{/full-size}} {{#float}}position-float-{{float}}{{/float}}">
+            <div data-index="{{overview-index}}" data-chapter-index="{{chapter-index}}" data-position="{{element-name}}" data-cancer-type="{{cancer-type}}" class="position-{{orientation}} {{#full-size}}position-full-size{{/full-size}} {{#float}}position-float-{{float}}{{/float}}">
                 <img alt="" src="img/positions/svg/{{svg-name}}">
                 <div class="hover-title">{{display-name}}<small>{{display-cancer-type}}</small></div>
                 <div data-position="{{element-name}}" class="detail detail-image-{{orientation}}">
